src/Compiler/Parser/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from src/Compiler/Parser/Parser.y
-----------------------------------------------------------------------------

state 8 contains 15 shift/reduce conflicts.
state 31 contains 4 shift/reduce conflicts.
state 41 contains 1 shift/reduce conflicts.
state 42 contains 1 shift/reduce conflicts.
state 46 contains 4 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 52 contains 1 shift/reduce conflicts.
state 53 contains 1 shift/reduce conflicts.
state 63 contains 12 shift/reduce conflicts.
state 72 contains 12 shift/reduce conflicts.
state 92 contains 1 shift/reduce conflicts.
state 93 contains 4 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 107 contains 1 reduce/reduce conflicts.
state 158 contains 4 shift/reduce conflicts.

terminal match is unused
terminal with is unused
terminal '_' is unused
terminal the is unused
terminal claim is unused
terminal define is unused
terminal fix is unused
terminal letrec is unused
terminal '::' is unused
terminal elim is unused
terminal assume is unused
terminal rec is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parserMain -> Program                       (0)
	%start_parserType -> Type                          (1)
	Program -> Exp                                     (2)
	Program -> Module                                  (3)
	Module -> module UpIdent where Layout__Declaration__   (4)
	Declaration -> Fun                                 (5)
	Declaration -> Data                                (6)
	Declaration -> TypeSynonym                         (7)
	Data -> data UpIdent Params Constructors           (8)
	Constructors ->                                    (9)
	Constructors -> '=' Constr NoneOrMany__ConstrOther__   (10)
	ConName -> OpCon                                   (11)
	ConName -> '`' Con '`'                             (12)
	Constr -> UpIdent NoneOrMany__TyAppLeft__          (13)
	Constr -> TyAppLeft ConName OneOrMany__TyAppLeft__   (14)
	ConstrOther -> '|' Constr                          (15)
	TypeSynonym -> type Con NoneOrMany__Var__ '=' Type   (16)
	Params -> NoneOrMany__Var__                        (17)
	LowIdent -> Var                                    (18)
	LowIdent -> '(' Op ')'                             (19)
	UpIdent -> Con                                     (20)
	UpIdent -> '(' opcon ')'                           (21)
	UpIdent -> unit                                    (22)
	Var -> varid                                       (23)
	Con -> conid                                       (24)
	Op -> op                                           (25)
	OpCon -> opcon                                     (26)
	Oper -> op                                         (27)
	Oper -> opcon                                      (28)
	Exp -> AppLeft                                     (29)
	Exp -> Application                                 (30)
	Exp -> '(' Exp ')'                                 (31)
	Application -> AppLeft OneOrMany__AppRight__       (32)
	Application -> AppLeft '`' Var '`' OneOrMany__AppRight__   (33)
	Application -> AppLeft '`' Con '`' OneOrMany__AppRight__   (34)
	Application -> AppLeft Oper OneOrMany__AppRight__   (35)
	AppLeft -> LowIdent                                (36)
	AppLeft -> Con                                     (37)
	AppLeft -> '(' opcon ')'                           (38)
	AppLeft -> symid                                   (39)
	AppLeft -> Lit                                     (40)
	AppLeft -> lambda Params '->' Exp                  (41)
	AppLeft -> '(' AppLeft ')'                         (42)
	AppLeft -> if Exp then Exp else Exp                (43)
	AppLeft -> let Layout__Binding__ in Exp            (44)
	AppLeft -> '(' Exp CommaSeparated__Exp__ ')'       (45)
	AppLeft -> '[' NoneOrManySeparated__Exp__ ']'      (46)
	AppLeft -> '(' Application ')'                     (47)
	AppRight -> AppLeft                                (48)
	Binding -> LowIdent Params '=' Exp                 (49)
	Binding -> Var Op Params '=' Exp                   (50)
	Binding -> Var '`' Var '`' Params '=' Exp          (51)
	Fun -> Binding                                     (52)
	Lit -> Integer                                     (53)
	Lit -> Double                                      (54)
	Lit -> char                                        (55)
	Lit -> string                                      (56)
	Integer -> integer                                 (57)
	Double -> double                                   (58)
	Type -> TyAppLeft                                  (59)
	Type -> TyApp                                      (60)
	Type -> '(' Type ')'                               (61)
	TyArr -> Type '->' Type                            (62)
	TyTuple -> '(' Type CommaSeparated__Type__ ')'     (63)
	TyApp -> TyAppLeft OneOrMany__TyAppLeft__          (64)
	TyAppLeft -> LowIdent                              (65)
	TyAppLeft -> UpIdent                               (66)
	TyAppLeft -> TyArr                                 (67)
	TyAppLeft -> TyTuple                               (68)
	TyAppLeft -> '(' TyApp ')'                         (69)
	TyAppLeft -> '(' TyAppLeft ')'                     (70)
	CommaSeparated__Exp__ -> ',' Exp                   (71)
	CommaSeparated__Exp__ -> ',' Exp CommaSeparated__Exp__   (72)
	CommaSeparated__Type__ -> ',' Type                 (73)
	CommaSeparated__Type__ -> ',' Type CommaSeparated__Type__   (74)
	Layout__Binding__ -> '{' LayoutInside__Binding__   (75)
	Layout__Declaration__ -> '{' LayoutInside__Declaration__   (76)
	NoneOrMany__ConstrOther__ ->                       (77)
	NoneOrMany__ConstrOther__ -> ConstrOther NoneOrMany__ConstrOther__   (78)
	NoneOrMany__TyAppLeft__ ->                         (79)
	NoneOrMany__TyAppLeft__ -> TyAppLeft NoneOrMany__TyAppLeft__   (80)
	NoneOrMany__Var__ ->                               (81)
	NoneOrMany__Var__ -> Var NoneOrMany__Var__         (82)
	NoneOrManySeparated__Exp__ ->                      (83)
	NoneOrManySeparated__Exp__ -> Exp                  (84)
	NoneOrManySeparated__Exp__ -> Exp ',' NoneOrManySeparated__Exp__   (85)
	OneOrMany__AppRight__ -> AppRight NoneOrMany__AppRight__   (86)
	OneOrMany__TyAppLeft__ -> TyAppLeft NoneOrMany__TyAppLeft__   (87)
	LayoutInside__Binding__ -> Binding '}'             (88)
	LayoutInside__Binding__ -> Binding ';' LayoutInside__Binding__   (89)
	LayoutInside__Declaration__ -> Declaration '}'     (90)
	LayoutInside__Declaration__ -> Declaration ';' LayoutInside__Declaration__   (91)
	NoneOrMany__AppRight__ ->                          (92)
	NoneOrMany__AppRight__ -> AppRight NoneOrMany__AppRight__   (93)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	match          { TokMatch }
	with           { TokWith }
	data           { TokData }
	if             { TokIf }
	then           { TokThen }
	else           { TokElse }
	let            { TokLet }
	in             { TokIn }
	type           { TokType }
	'_'            { TokHole }
	the            { TokThe }
	claim          { TokClaim }
	define         { TokDefine }
	lambda         { TokLambda }
	fix            { TokFix }
	letrec         { TokLetrec }
	'->'           { TokOperator "->" }
	'='            { TokOperator "=" }
	'|'            { TokOperator "|" }
	'::'           { TokHasType }
	varid          { TokVarLower $$ }
	conid          { TokVarUpper $$ }
	op             { TokOperator $$ }
	opcon          { TokOpConstr $$ }
	symid          { TokNativeSym $$ }
	elim           { TokEliminator $$ }
	'('            { TokLeftParen }
	')'            { TokRightParen }
	'['            { TokLeftBracket }
	']'            { TokRightBracket }
	','            { TokComma }
	'`'            { TokBackTick }
	'{'            { TokLeftBrace }
	'}'            { TokRightBrace }
	';'            { TokSemicolon }
	unit           { TokVarUpper "()" }
	integer        { TokInt $$ }
	char           { TokChar $$ }
	double         { TokDouble $$ }
	string         { TokString $$ }
	assume         { TokAssume }
	rec            { TokRec }
	module         { TokModule }
	where          { TokWhere }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parserMain rule  0
	%start_parserType rule  1
	Program         rules 2, 3
	Module          rule  4
	Declaration     rules 5, 6, 7
	Data            rule  8
	Constructors    rules 9, 10
	ConName         rules 11, 12
	Constr          rules 13, 14
	ConstrOther     rule  15
	TypeSynonym     rule  16
	Params          rule  17
	LowIdent        rules 18, 19
	UpIdent         rules 20, 21, 22
	Var             rule  23
	Con             rule  24
	Op              rule  25
	OpCon           rule  26
	Oper            rules 27, 28
	Exp             rules 29, 30, 31
	Application     rules 32, 33, 34, 35
	AppLeft         rules 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47
	AppRight        rule  48
	Binding         rules 49, 50, 51
	Fun             rule  52
	Lit             rules 53, 54, 55, 56
	Integer         rule  57
	Double          rule  58
	Type            rules 59, 60, 61
	TyArr           rule  62
	TyTuple         rule  63
	TyApp           rule  64
	TyAppLeft       rules 65, 66, 67, 68, 69, 70
	CommaSeparated__Exp__ rules 71, 72
	CommaSeparated__Type__ rules 73, 74
	Layout__Binding__ rule  75
	Layout__Declaration__ rule  76
	NoneOrMany__ConstrOther__ rules 77, 78
	NoneOrMany__TyAppLeft__ rules 79, 80
	NoneOrMany__Var__ rules 81, 82
	NoneOrManySeparated__Exp__ rules 83, 84, 85
	OneOrMany__AppRight__ rule  86
	OneOrMany__TyAppLeft__ rule  87
	LayoutInside__Binding__ rules 88, 89
	LayoutInside__Declaration__ rules 90, 91
	NoneOrMany__AppRight__ rules 92, 93

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parserMain -> . Program                      (rule 0)

	if             shift, and enter state 12
	let            shift, and enter state 13
	lambda         shift, and enter state 14
	varid          shift, and enter state 15
	conid          shift, and enter state 16
	symid          shift, and enter state 17
	'('            shift, and enter state 18
	'['            shift, and enter state 19
	integer        shift, and enter state 20
	char           shift, and enter state 21
	double         shift, and enter state 22
	string         shift, and enter state 23
	module         shift, and enter state 36

	Program        goto state 34
	Module         goto state 35
	LowIdent       goto state 3
	Var            goto state 4
	Con            goto state 5
	Exp            goto state 6
	Application    goto state 7
	AppLeft        goto state 8
	Lit            goto state 9
	Integer        goto state 10
	Double         goto state 11

State 1

	%start_parserType -> . Type                         (rule 1)

	varid          shift, and enter state 15
	conid          shift, and enter state 16
	'('            shift, and enter state 32
	unit           shift, and enter state 33

	LowIdent       goto state 24
	UpIdent        goto state 25
	Var            goto state 4
	Con            goto state 26
	Type           goto state 27
	TyArr          goto state 28
	TyTuple        goto state 29
	TyApp          goto state 30
	TyAppLeft      goto state 31

State 2

	Program -> . Exp                                    (rule 2)

	if             shift, and enter state 12
	let            shift, and enter state 13
	lambda         shift, and enter state 14
	varid          shift, and enter state 15
	conid          shift, and enter state 16
	symid          shift, and enter state 17
	'('            shift, and enter state 18
	'['            shift, and enter state 19
	integer        shift, and enter state 20
	char           shift, and enter state 21
	double         shift, and enter state 22
	string         shift, and enter state 23

	LowIdent       goto state 3
	Var            goto state 4
	Con            goto state 5
	Exp            goto state 6
	Application    goto state 7
	AppLeft        goto state 8
	Lit            goto state 9
	Integer        goto state 10
	Double         goto state 11

State 3

	AppLeft -> LowIdent .                               (rule 36)

	if             reduce using rule 36
	then           reduce using rule 36
	else           reduce using rule 36
	let            reduce using rule 36
	lambda         reduce using rule 36
	varid          reduce using rule 36
	conid          reduce using rule 36
	op             reduce using rule 36
	opcon          reduce using rule 36
	symid          reduce using rule 36
	'('            reduce using rule 36
	')'            reduce using rule 36
	'['            reduce using rule 36
	']'            reduce using rule 36
	','            reduce using rule 36
	'`'            reduce using rule 36
	'}'            reduce using rule 36
	';'            reduce using rule 36
	integer        reduce using rule 36
	char           reduce using rule 36
	double         reduce using rule 36
	string         reduce using rule 36
	%eof           reduce using rule 36


State 4

	LowIdent -> Var .                                   (rule 18)

	if             reduce using rule 18
	then           reduce using rule 18
	else           reduce using rule 18
	let            reduce using rule 18
	lambda         reduce using rule 18
	'->'           reduce using rule 18
	'|'            reduce using rule 18
	varid          reduce using rule 18
	conid          reduce using rule 18
	op             reduce using rule 18
	opcon          reduce using rule 18
	symid          reduce using rule 18
	'('            reduce using rule 18
	')'            reduce using rule 18
	'['            reduce using rule 18
	']'            reduce using rule 18
	','            reduce using rule 18
	'`'            reduce using rule 18
	'}'            reduce using rule 18
	';'            reduce using rule 18
	unit           reduce using rule 18
	integer        reduce using rule 18
	char           reduce using rule 18
	double         reduce using rule 18
	string         reduce using rule 18
	%eof           reduce using rule 18


State 5

	AppLeft -> Con .                                    (rule 37)

	if             reduce using rule 37
	then           reduce using rule 37
	else           reduce using rule 37
	let            reduce using rule 37
	lambda         reduce using rule 37
	varid          reduce using rule 37
	conid          reduce using rule 37
	op             reduce using rule 37
	opcon          reduce using rule 37
	symid          reduce using rule 37
	'('            reduce using rule 37
	')'            reduce using rule 37
	'['            reduce using rule 37
	']'            reduce using rule 37
	','            reduce using rule 37
	'`'            reduce using rule 37
	'}'            reduce using rule 37
	';'            reduce using rule 37
	integer        reduce using rule 37
	char           reduce using rule 37
	double         reduce using rule 37
	string         reduce using rule 37
	%eof           reduce using rule 37


State 6

	Program -> Exp .                                    (rule 2)

	%eof           reduce using rule 2


State 7

	Exp -> Application .                                (rule 30)

	if             reduce using rule 30
	then           reduce using rule 30
	else           reduce using rule 30
	let            reduce using rule 30
	lambda         reduce using rule 30
	varid          reduce using rule 30
	conid          reduce using rule 30
	op             reduce using rule 30
	opcon          reduce using rule 30
	symid          reduce using rule 30
	'('            reduce using rule 30
	')'            reduce using rule 30
	'['            reduce using rule 30
	']'            reduce using rule 30
	','            reduce using rule 30
	'`'            reduce using rule 30
	'}'            reduce using rule 30
	';'            reduce using rule 30
	integer        reduce using rule 30
	char           reduce using rule 30
	double         reduce using rule 30
	string         reduce using rule 30
	%eof           reduce using rule 30


State 8

	Exp -> AppLeft .                                    (rule 29)
	Application -> AppLeft . OneOrMany__AppRight__      (rule 32)
	Application -> AppLeft . '`' Var '`' OneOrMany__AppRight__    (rule 33)
	Application -> AppLeft . '`' Con '`' OneOrMany__AppRight__    (rule 34)
	Application -> AppLeft . Oper OneOrMany__AppRight__    (rule 35)

	if             shift, and enter state 12
			(reduce using rule 29)

	then           reduce using rule 29
	else           reduce using rule 29
	let            shift, and enter state 13
			(reduce using rule 29)

	lambda         shift, and enter state 14
			(reduce using rule 29)

	varid          shift, and enter state 15
			(reduce using rule 29)

	conid          shift, and enter state 16
			(reduce using rule 29)

	op             shift, and enter state 65
			(reduce using rule 29)

	opcon          shift, and enter state 66
			(reduce using rule 29)

	symid          shift, and enter state 17
			(reduce using rule 29)

	'('            shift, and enter state 67
			(reduce using rule 29)

	')'            reduce using rule 29
	'['            shift, and enter state 19
			(reduce using rule 29)

	']'            reduce using rule 29
	','            reduce using rule 29
	'`'            shift, and enter state 68
			(reduce using rule 29)

	'}'            reduce using rule 29
	';'            reduce using rule 29
	integer        shift, and enter state 20
			(reduce using rule 29)

	char           shift, and enter state 21
			(reduce using rule 29)

	double         shift, and enter state 22
			(reduce using rule 29)

	string         shift, and enter state 23
			(reduce using rule 29)

	%eof           reduce using rule 29

	LowIdent       goto state 3
	Var            goto state 4
	Con            goto state 5
	Oper           goto state 61
	AppLeft        goto state 62
	AppRight       goto state 63
	Lit            goto state 9
	Integer        goto state 10
	Double         goto state 11
	OneOrMany__AppRight__goto state 64

State 9

	AppLeft -> Lit .                                    (rule 40)

	if             reduce using rule 40
	then           reduce using rule 40
	else           reduce using rule 40
	let            reduce using rule 40
	lambda         reduce using rule 40
	varid          reduce using rule 40
	conid          reduce using rule 40
	op             reduce using rule 40
	opcon          reduce using rule 40
	symid          reduce using rule 40
	'('            reduce using rule 40
	')'            reduce using rule 40
	'['            reduce using rule 40
	']'            reduce using rule 40
	','            reduce using rule 40
	'`'            reduce using rule 40
	'}'            reduce using rule 40
	';'            reduce using rule 40
	integer        reduce using rule 40
	char           reduce using rule 40
	double         reduce using rule 40
	string         reduce using rule 40
	%eof           reduce using rule 40


State 10

	Lit -> Integer .                                    (rule 53)

	if             reduce using rule 53
	then           reduce using rule 53
	else           reduce using rule 53
	let            reduce using rule 53
	lambda         reduce using rule 53
	varid          reduce using rule 53
	conid          reduce using rule 53
	op             reduce using rule 53
	opcon          reduce using rule 53
	symid          reduce using rule 53
	'('            reduce using rule 53
	')'            reduce using rule 53
	'['            reduce using rule 53
	']'            reduce using rule 53
	','            reduce using rule 53
	'`'            reduce using rule 53
	'}'            reduce using rule 53
	';'            reduce using rule 53
	integer        reduce using rule 53
	char           reduce using rule 53
	double         reduce using rule 53
	string         reduce using rule 53
	%eof           reduce using rule 53


State 11

	Lit -> Double .                                     (rule 54)

	if             reduce using rule 54
	then           reduce using rule 54
	else           reduce using rule 54
	let            reduce using rule 54
	lambda         reduce using rule 54
	varid          reduce using rule 54
	conid          reduce using rule 54
	op             reduce using rule 54
	opcon          reduce using rule 54
	symid          reduce using rule 54
	'('            reduce using rule 54
	')'            reduce using rule 54
	'['            reduce using rule 54
	']'            reduce using rule 54
	','            reduce using rule 54
	'`'            reduce using rule 54
	'}'            reduce using rule 54
	';'            reduce using rule 54
	integer        reduce using rule 54
	char           reduce using rule 54
	double         reduce using rule 54
	string         reduce using rule 54
	%eof           reduce using rule 54


State 12

	AppLeft -> if . Exp then Exp else Exp               (rule 43)

	if             shift, and enter state 12
	let            shift, and enter state 13
	lambda         shift, and enter state 14
	varid          shift, and enter state 15
	conid          shift, and enter state 16
	symid          shift, and enter state 17
	'('            shift, and enter state 18
	'['            shift, and enter state 19
	integer        shift, and enter state 20
	char           shift, and enter state 21
	double         shift, and enter state 22
	string         shift, and enter state 23

	LowIdent       goto state 3
	Var            goto state 4
	Con            goto state 5
	Exp            goto state 60
	Application    goto state 7
	AppLeft        goto state 8
	Lit            goto state 9
	Integer        goto state 10
	Double         goto state 11

State 13

	AppLeft -> let . Layout__Binding__ in Exp           (rule 44)

	'{'            shift, and enter state 59

	Layout__Binding__goto state 58

State 14

	AppLeft -> lambda . Params '->' Exp                 (rule 41)

	'->'           reduce using rule 81
	varid          shift, and enter state 15

	Params         goto state 55
	Var            goto state 56
	NoneOrMany__Var__goto state 57

State 15

	Var -> varid .                                      (rule 23)

	if             reduce using rule 23
	then           reduce using rule 23
	else           reduce using rule 23
	let            reduce using rule 23
	lambda         reduce using rule 23
	'->'           reduce using rule 23
	'='            reduce using rule 23
	'|'            reduce using rule 23
	varid          reduce using rule 23
	conid          reduce using rule 23
	op             reduce using rule 23
	opcon          reduce using rule 23
	symid          reduce using rule 23
	'('            reduce using rule 23
	')'            reduce using rule 23
	'['            reduce using rule 23
	']'            reduce using rule 23
	','            reduce using rule 23
	'`'            reduce using rule 23
	'}'            reduce using rule 23
	';'            reduce using rule 23
	unit           reduce using rule 23
	integer        reduce using rule 23
	char           reduce using rule 23
	double         reduce using rule 23
	string         reduce using rule 23
	%eof           reduce using rule 23


State 16

	Con -> conid .                                      (rule 24)

	if             reduce using rule 24
	then           reduce using rule 24
	else           reduce using rule 24
	let            reduce using rule 24
	lambda         reduce using rule 24
	'->'           reduce using rule 24
	'='            reduce using rule 24
	'|'            reduce using rule 24
	varid          reduce using rule 24
	conid          reduce using rule 24
	op             reduce using rule 24
	opcon          reduce using rule 24
	symid          reduce using rule 24
	'('            reduce using rule 24
	')'            reduce using rule 24
	'['            reduce using rule 24
	']'            reduce using rule 24
	','            reduce using rule 24
	'`'            reduce using rule 24
	'}'            reduce using rule 24
	';'            reduce using rule 24
	unit           reduce using rule 24
	integer        reduce using rule 24
	char           reduce using rule 24
	double         reduce using rule 24
	string         reduce using rule 24
	where          reduce using rule 24
	%eof           reduce using rule 24


State 17

	AppLeft -> symid .                                  (rule 39)

	if             reduce using rule 39
	then           reduce using rule 39
	else           reduce using rule 39
	let            reduce using rule 39
	lambda         reduce using rule 39
	varid          reduce using rule 39
	conid          reduce using rule 39
	op             reduce using rule 39
	opcon          reduce using rule 39
	symid          reduce using rule 39
	'('            reduce using rule 39
	')'            reduce using rule 39
	'['            reduce using rule 39
	']'            reduce using rule 39
	','            reduce using rule 39
	'`'            reduce using rule 39
	'}'            reduce using rule 39
	';'            reduce using rule 39
	integer        reduce using rule 39
	char           reduce using rule 39
	double         reduce using rule 39
	string         reduce using rule 39
	%eof           reduce using rule 39


State 18

	LowIdent -> '(' . Op ')'                            (rule 19)
	Exp -> '(' . Exp ')'                                (rule 31)
	AppLeft -> '(' . opcon ')'                          (rule 38)
	AppLeft -> '(' . AppLeft ')'                        (rule 42)
	AppLeft -> '(' . Exp CommaSeparated__Exp__ ')'      (rule 45)
	AppLeft -> '(' . Application ')'                    (rule 47)

	if             shift, and enter state 12
	let            shift, and enter state 13
	lambda         shift, and enter state 14
	varid          shift, and enter state 15
	conid          shift, and enter state 16
	op             shift, and enter state 43
	opcon          shift, and enter state 54
	symid          shift, and enter state 17
	'('            shift, and enter state 18
	'['            shift, and enter state 19
	integer        shift, and enter state 20
	char           shift, and enter state 21
	double         shift, and enter state 22
	string         shift, and enter state 23

	LowIdent       goto state 3
	Var            goto state 4
	Con            goto state 5
	Op             goto state 39
	Exp            goto state 51
	Application    goto state 52
	AppLeft        goto state 53
	Lit            goto state 9
	Integer        goto state 10
	Double         goto state 11

State 19

	AppLeft -> '[' . NoneOrManySeparated__Exp__ ']'     (rule 46)

	if             shift, and enter state 12
	let            shift, and enter state 13
	lambda         shift, and enter state 14
	varid          shift, and enter state 15
	conid          shift, and enter state 16
	symid          shift, and enter state 17
	'('            shift, and enter state 18
	'['            shift, and enter state 19
	']'            reduce using rule 83
	integer        shift, and enter state 20
	char           shift, and enter state 21
	double         shift, and enter state 22
	string         shift, and enter state 23

	LowIdent       goto state 3
	Var            goto state 4
	Con            goto state 5
	Exp            goto state 49
	Application    goto state 7
	AppLeft        goto state 8
	Lit            goto state 9
	Integer        goto state 10
	Double         goto state 11
	NoneOrManySeparated__Exp__goto state 50

State 20

	Integer -> integer .                                (rule 57)

	if             reduce using rule 57
	then           reduce using rule 57
	else           reduce using rule 57
	let            reduce using rule 57
	lambda         reduce using rule 57
	varid          reduce using rule 57
	conid          reduce using rule 57
	op             reduce using rule 57
	opcon          reduce using rule 57
	symid          reduce using rule 57
	'('            reduce using rule 57
	')'            reduce using rule 57
	'['            reduce using rule 57
	']'            reduce using rule 57
	','            reduce using rule 57
	'`'            reduce using rule 57
	'}'            reduce using rule 57
	';'            reduce using rule 57
	integer        reduce using rule 57
	char           reduce using rule 57
	double         reduce using rule 57
	string         reduce using rule 57
	%eof           reduce using rule 57


State 21

	Lit -> char .                                       (rule 55)

	if             reduce using rule 55
	then           reduce using rule 55
	else           reduce using rule 55
	let            reduce using rule 55
	lambda         reduce using rule 55
	varid          reduce using rule 55
	conid          reduce using rule 55
	op             reduce using rule 55
	opcon          reduce using rule 55
	symid          reduce using rule 55
	'('            reduce using rule 55
	')'            reduce using rule 55
	'['            reduce using rule 55
	']'            reduce using rule 55
	','            reduce using rule 55
	'`'            reduce using rule 55
	'}'            reduce using rule 55
	';'            reduce using rule 55
	integer        reduce using rule 55
	char           reduce using rule 55
	double         reduce using rule 55
	string         reduce using rule 55
	%eof           reduce using rule 55


State 22

	Double -> double .                                  (rule 58)

	if             reduce using rule 58
	then           reduce using rule 58
	else           reduce using rule 58
	let            reduce using rule 58
	lambda         reduce using rule 58
	varid          reduce using rule 58
	conid          reduce using rule 58
	op             reduce using rule 58
	opcon          reduce using rule 58
	symid          reduce using rule 58
	'('            reduce using rule 58
	')'            reduce using rule 58
	'['            reduce using rule 58
	']'            reduce using rule 58
	','            reduce using rule 58
	'`'            reduce using rule 58
	'}'            reduce using rule 58
	';'            reduce using rule 58
	integer        reduce using rule 58
	char           reduce using rule 58
	double         reduce using rule 58
	string         reduce using rule 58
	%eof           reduce using rule 58


State 23

	Lit -> string .                                     (rule 56)

	if             reduce using rule 56
	then           reduce using rule 56
	else           reduce using rule 56
	let            reduce using rule 56
	lambda         reduce using rule 56
	varid          reduce using rule 56
	conid          reduce using rule 56
	op             reduce using rule 56
	opcon          reduce using rule 56
	symid          reduce using rule 56
	'('            reduce using rule 56
	')'            reduce using rule 56
	'['            reduce using rule 56
	']'            reduce using rule 56
	','            reduce using rule 56
	'`'            reduce using rule 56
	'}'            reduce using rule 56
	';'            reduce using rule 56
	integer        reduce using rule 56
	char           reduce using rule 56
	double         reduce using rule 56
	string         reduce using rule 56
	%eof           reduce using rule 56


State 24

	TyAppLeft -> LowIdent .                             (rule 65)

	'->'           reduce using rule 65
	'|'            reduce using rule 65
	varid          reduce using rule 65
	conid          reduce using rule 65
	opcon          reduce using rule 65
	'('            reduce using rule 65
	')'            reduce using rule 65
	','            reduce using rule 65
	'`'            reduce using rule 65
	'}'            reduce using rule 65
	';'            reduce using rule 65
	unit           reduce using rule 65
	%eof           reduce using rule 65


State 25

	TyAppLeft -> UpIdent .                              (rule 66)

	'->'           reduce using rule 66
	'|'            reduce using rule 66
	varid          reduce using rule 66
	conid          reduce using rule 66
	opcon          reduce using rule 66
	'('            reduce using rule 66
	')'            reduce using rule 66
	','            reduce using rule 66
	'`'            reduce using rule 66
	'}'            reduce using rule 66
	';'            reduce using rule 66
	unit           reduce using rule 66
	%eof           reduce using rule 66


State 26

	UpIdent -> Con .                                    (rule 20)

	'->'           reduce using rule 20
	'='            reduce using rule 20
	'|'            reduce using rule 20
	varid          reduce using rule 20
	conid          reduce using rule 20
	opcon          reduce using rule 20
	'('            reduce using rule 20
	')'            reduce using rule 20
	','            reduce using rule 20
	'`'            reduce using rule 20
	'}'            reduce using rule 20
	';'            reduce using rule 20
	unit           reduce using rule 20
	where          reduce using rule 20
	%eof           reduce using rule 20


State 27

	%start_parserType -> Type .                         (rule 1)
	TyArr -> Type . '->' Type                           (rule 62)

	'->'           shift, and enter state 48
	%eof           accept


State 28

	TyAppLeft -> TyArr .                                (rule 67)

	'->'           reduce using rule 67
	'|'            reduce using rule 67
	varid          reduce using rule 67
	conid          reduce using rule 67
	opcon          reduce using rule 67
	'('            reduce using rule 67
	')'            reduce using rule 67
	','            reduce using rule 67
	'`'            reduce using rule 67
	'}'            reduce using rule 67
	';'            reduce using rule 67
	unit           reduce using rule 67
	%eof           reduce using rule 67


State 29

	TyAppLeft -> TyTuple .                              (rule 68)

	'->'           reduce using rule 68
	'|'            reduce using rule 68
	varid          reduce using rule 68
	conid          reduce using rule 68
	opcon          reduce using rule 68
	'('            reduce using rule 68
	')'            reduce using rule 68
	','            reduce using rule 68
	'`'            reduce using rule 68
	'}'            reduce using rule 68
	';'            reduce using rule 68
	unit           reduce using rule 68
	%eof           reduce using rule 68


State 30

	Type -> TyApp .                                     (rule 60)

	'->'           reduce using rule 60
	'|'            reduce using rule 60
	varid          reduce using rule 60
	conid          reduce using rule 60
	opcon          reduce using rule 60
	'('            reduce using rule 60
	')'            reduce using rule 60
	','            reduce using rule 60
	'`'            reduce using rule 60
	'}'            reduce using rule 60
	';'            reduce using rule 60
	unit           reduce using rule 60
	%eof           reduce using rule 60


State 31

	Type -> TyAppLeft .                                 (rule 59)
	TyApp -> TyAppLeft . OneOrMany__TyAppLeft__         (rule 64)

	'->'           reduce using rule 59
	'|'            reduce using rule 59
	varid          shift, and enter state 15
			(reduce using rule 59)

	conid          shift, and enter state 16
			(reduce using rule 59)

	opcon          reduce using rule 59
	'('            shift, and enter state 32
			(reduce using rule 59)

	')'            reduce using rule 59
	','            reduce using rule 59
	'`'            reduce using rule 59
	'}'            reduce using rule 59
	';'            reduce using rule 59
	unit           shift, and enter state 33
			(reduce using rule 59)

	%eof           reduce using rule 59

	LowIdent       goto state 24
	UpIdent        goto state 25
	Var            goto state 4
	Con            goto state 26
	Type           goto state 45
	TyArr          goto state 28
	TyTuple        goto state 29
	TyApp          goto state 30
	TyAppLeft      goto state 46
	OneOrMany__TyAppLeft__goto state 47

State 32

	LowIdent -> '(' . Op ')'                            (rule 19)
	UpIdent -> '(' . opcon ')'                          (rule 21)
	Type -> '(' . Type ')'                              (rule 61)
	TyTuple -> '(' . Type CommaSeparated__Type__ ')'    (rule 63)
	TyAppLeft -> '(' . TyApp ')'                        (rule 69)
	TyAppLeft -> '(' . TyAppLeft ')'                    (rule 70)

	varid          shift, and enter state 15
	conid          shift, and enter state 16
	op             shift, and enter state 43
	opcon          shift, and enter state 44
	'('            shift, and enter state 32
	unit           shift, and enter state 33

	LowIdent       goto state 24
	UpIdent        goto state 25
	Var            goto state 4
	Con            goto state 26
	Op             goto state 39
	Type           goto state 40
	TyArr          goto state 28
	TyTuple        goto state 29
	TyApp          goto state 41
	TyAppLeft      goto state 42

State 33

	UpIdent -> unit .                                   (rule 22)

	'->'           reduce using rule 22
	'='            reduce using rule 22
	'|'            reduce using rule 22
	varid          reduce using rule 22
	conid          reduce using rule 22
	opcon          reduce using rule 22
	'('            reduce using rule 22
	')'            reduce using rule 22
	','            reduce using rule 22
	'`'            reduce using rule 22
	'}'            reduce using rule 22
	';'            reduce using rule 22
	unit           reduce using rule 22
	where          reduce using rule 22
	%eof           reduce using rule 22


State 34

	%start_parserMain -> Program .                      (rule 0)

	%eof           accept


State 35

	Program -> Module .                                 (rule 3)

	%eof           reduce using rule 3


State 36

	Module -> module . UpIdent where Layout__Declaration__    (rule 4)

	conid          shift, and enter state 16
	'('            shift, and enter state 38
	unit           shift, and enter state 33

	UpIdent        goto state 37
	Con            goto state 26

State 37

	Module -> module UpIdent . where Layout__Declaration__    (rule 4)

	where          shift, and enter state 102


State 38

	UpIdent -> '(' . opcon ')'                          (rule 21)

	opcon          shift, and enter state 44


State 39

	LowIdent -> '(' Op . ')'                            (rule 19)

	')'            shift, and enter state 101


State 40

	Type -> '(' Type . ')'                              (rule 61)
	TyArr -> Type . '->' Type                           (rule 62)
	TyTuple -> '(' Type . CommaSeparated__Type__ ')'    (rule 63)

	'->'           shift, and enter state 48
	')'            shift, and enter state 99
	','            shift, and enter state 100

	CommaSeparated__Type__goto state 98

State 41
